--- a/index.html
+++ b/index.html
@@ -420,5 +420,16 @@
         <button class="close" type="button" aria-label="Закрыть"></button>
       </div>
     </div>
+    <div class="pop-up good-to-cart">
+      <h2 class="visually-hidden">Товар добавлен в корзину</h2>
+      <button class="close" type="button" aria-label="Закрыть"></button>
+      <div class="top-side">
+        <span>Товар добавлен в корзину!</span>
+      </div>
+      <div class="bottom-side">
+        <a class="to-order" href="#">Оформить заказ</a>
+        <a class="keep-buy" href="catalog.html">Продолжить покупки</a>
+      </div>
+    </div>
   </body>
 </html>
