--- a/catalog.html
+++ b/catalog.html
@@ -58,7 +58,7 @@
                 </li>
                 <li >
                   <a class="sign-out" href="#" aria-label="Кнопка выхода из профайла">
-                    <svg class="icon-sign-out"xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
+                    <svg class="icon-sign-out" xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
                       <g fill="#c5c5c5">
                         <path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
                         <path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
@@ -143,7 +143,7 @@
                   <ul class="filter-makers">
                     <li class="filter-option filter-checkbox">
                       <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" id="bosch" name="BOSCH" checked>
-                      <label class="maker" for="bosch" tabindex="0">BOSCH</label>
+                      <label class="maker" for="bosch" >BOSCH</label>
                     </li>
                     <li class="filter-option filter-checkbox">
                       <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" id="interskol" name="interskol">
@@ -171,7 +171,7 @@
                       <label for="accum">АККУМУЛЯТОРНЫЕ</label>
                     </li>
                     <li class="filter-option filter-radio">
-                      <input class="visually-hidden filter-input-radio filter-input"id="electric" type="radio" name="power" value="electric">
+                      <input class="visually-hidden filter-input-radio filter-input" id="electric" type="radio" name="power" value="electric">
                       <label for="electric">СЕТЕВЫЕ</label>
                     </li>
                   </ul>
@@ -462,5 +462,7 @@
         <a class="keep-buy" href="catalog.html">Продолжить покупки</a>
       </div>
     </div>
+    <script src="js/cart.js"></script>
+
   </body>
 </html>
