--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="contacts">
               <div class="phone">
                 <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
-                <a class="phone-number" href="+78125550555" aria-label="Номер телефона компании">+7 (812) 555-05-55</a>
+                <a class="phone-number" href="tel:+78125550555" aria-label="Номер телефона компании">+7 (812) 555-05-55</a>
               </div>
               <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
@@ -338,7 +338,7 @@
             <p>Вы можете забрать товар сами,<br>
                заехав в наш офис:</p>
             <a class="map" href="#" aria-label="карта">
-              <img src="img/map.png" width="300" height="158" alt="карта">
+              <img src="img/others/map.png" width="300" height="158" alt="карта">
             </a>
             <a class="write-us-button" href="#" aria-label="Напишите нам!">заблудились? напишите нам!</a>
           </div>
