--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
             <div class="contacts  contacts-catalog">
               <div class="phone phone-catalog">
                 <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
-                <a class="phone-number" href="+78125550555" aria-label="телефон для связи">+7 (812) 555-05-55</a>
+                <a class="phone-number" href="tel:+78125550555" aria-label="телефон для связи">+7 (812) 555-05-55</a>
               </div>
               <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
@@ -93,7 +93,7 @@
         <h1 class="visually-hidden">Каталог товаров</h1>
         <div class="directory conteiner">
           <ul class="directory-folder">
-            <li><a href="index.html" aria-label="перейти в корневой каталог"><img src="img/svg/icon-home.svg" alt="Кнопка возврата к корневому каталогу"></a></li>
+            <li><a href="index.html" aria-label="перейти в корневой каталог"><img src="img/svg/icon-home.svg" width="14px" height="12px" alt="Кнопка возврата к корневому каталогу"></a></li>
             <li><a href="catalog.html" aria-label="Каталог">Каталог</a></li>
             <li><a href="blank.html" aria-label="инструмент">Инструмент</a></li>
             <li><a href="blank.html" aria-label="перфоратор">Перфораторы</a></li>
