--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
         <h1 class="visually-hidden">Каталог товаров</h1>
         <div class="directory conteiner">
           <ul class="directory-folder">
-            <li><a href="index.html" aria-label="перейти в корневой каталог"><img src="img/svg/icon-home.svg" width="14px" height="12px" alt="Кнопка возврата к корневому каталогу"></a></li>
+            <li><a href="index.html" aria-label="перейти в корневой каталог"><img src="img/svg/icon-home.svg" width="14" height="12" alt="Кнопка возврата к корневому каталогу"></a></li>
             <li><a href="catalog.html" aria-label="Каталог">Каталог</a></li>
             <li><a href="blank.html" aria-label="инструмент">Инструмент</a></li>
             <li><a href="blank.html" aria-label="перфоратор">Перфораторы</a></li>
