самые последние поправки

--- a/catalog.html
+++ b/catalog.html
@@ -34,15 +34,19 @@
         <div class="container">
           <div class="bottom-nav">
             <div class="header-info">
-              <p>Интернет-магазин<br>
-                строительных материалов<br>
-                и инструментов для ремонта
-              </p>
+              <div class="header-info-text">
+                <p>Интернет-магазин<br>
+                  строительных материалов <br>
+                  и инструментов для ремонта
+                </p>
+              </div>
               <div class="contacts  contacts-catalog">
                 <div class="phone phone-catalog">
                   <a class="phone-number" href="tel:+78125550555" aria-label="телефон для связи">+7 (812) 555-05-55</a>
                 </div>
-                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                <div class="address">
+                  <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                </div>
               </div>
               <div class="user-nav">
                 <ul class="button-user-nav catalog">
@@ -202,9 +206,9 @@
           <div class="sort">
             <p class="block-title">Сортировка:</p>
             <ul class="sort-list">
-              <li><a class="act" href="#" >по цене</a></li>
-              <li><a href="#">по типу</a></li>
-              <li><a href="#">по функционалу</a></li>
+              <li><a class="act" href="#" aria-label="упорядочить по цене">по цене</a></li>
+              <li><a href="#" aria-label="упорядочить по типу">по типу</a></li>
+              <li><a href="#" aria-label="упорядочить по функционалу">по функционалу</a></li>
             </ul>
             <ul class="up-down">
               <li>
@@ -239,7 +243,7 @@
               <span class="old-price">
                 30500 Р.
               </span>
-              <a class="new-price" aria-label="новая цена">25500 Р.</a>
+              <div class="new-price-area"><div class="new-price">25500 Р.</div></div>
             </article>
             <article class="good bfg6000">
               <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
@@ -255,7 +259,7 @@
               <span class="old-price">
                 30500 Р.
               </span>
-              <a class="new-price" aria-label="новая цена">25500 Р.</a>
+              <div class="new-price-area"><div class="new-price">25500 Р.</div></div>
             </article>
             <article class="good bfg6000">
               <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
@@ -272,7 +276,7 @@
               <span class="old-price">
                 30500 Р.
               </span>
-              <a class="new-price" aria-label="новая цена">25500 Р.</a>
+              <div class="new-price-area"><div class="new-price">25500 Р.</div></div>
             </article>
             <article class="good bfg3000" >
               <img src="img/goods/perf2-3000.jpg" width="127" height="112" alt="BOSCH BFG 3000">
@@ -287,7 +291,7 @@
               <h4 class="perf">Перфоратор BOSCH BFG 3000</h4>
               <div class="corner-label new-good">New</div>
               <div class="old-price">22500 Р.</div>
-              <a class="new-price" aria-label="новая цена">15500 Р.</a>
+              <div class="new-price-area"><div class="new-price">15500 Р.</div></div>
             </article>
             <article class="good bfg6000">
               <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
@@ -303,7 +307,7 @@
               <span class="old-price">
                 30500 Р.
               </span>
-              <a class="new-price" aria-label="новая цена">25500 Р.</a>
+              <div class="new-price-area"><div class="new-price">25500 Р.</div></div>
             </article>
             <article class="good bfg2000">
               <img src="img/goods/perf2-3000.jpg" width="127" height="112" alt="BOSCH BFG 2000">
@@ -318,7 +322,7 @@
               <div class="corner-label new-good">New</div>
               <h4 class="perf">Перфоратор BOSCH BFG 2000</h4>
               <div class="old-price invisible">123</div>
-              <a class="new-price" aria-label="новая цена">12500 Р.</a>
+              <div class="new-price-area"><div class="new-price">12500 Р.</div></div>
             </article>
             <article class="good bfg3000" >
               <img src="img/goods/perf2-3000.jpg" width="127" height="112" alt="BOSCH BFG 3000">
@@ -333,7 +337,7 @@
               <h4 class="perf">Перфоратор BOSCH BFG 3000</h4>
               <div class="corner-label new-good">New</div>
               <div class="old-price">22500 Р.</div>
-              <a class="new-price" aria-label="новая цена">15500 Р.</a>
+              <div class="new-price-area"><div class="new-price">15500 Р.</div></div>
             </article>
             <article class="good bfg6000">
               <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
@@ -349,7 +353,7 @@
               <span class="old-price">
                 30500 Р.
               </span>
-              <a class="new-price" aria-label="новая цена">25500 Р.</a>
+              <div class="new-price-area"><div class="new-price">25500 Р.</div></div>
             </article>
             <article class="good bfg2000">
               <img src="img/goods/perf2-3000.jpg" width="127" height="112" alt="BOSCH BFG 2000">
@@ -364,7 +368,7 @@
               <div class="corner-label new-good">New</div>
               <h4 class="perf">Перфоратор BOSCH BFG 2000</h4>
               <div class="old-price invisible">123</div>
-              <a class="new-price" aria-label="новая цена">12500 Р.</a>
+              <div class="new-price-area"><div class="new-price">12500 Р.</div></div>
             </article>
           </section>
           <div class="pages">
@@ -395,8 +399,10 @@
               <a class="footer-logo" href="#" aria-label="Логотип компании Техномарт">
                 <img src="img/svg/logo-technomart-footer.svg" width="220" height="68" alt="Логотип Техномарт">
               </a>
-              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-              <p>+7 (812) 555-05-55</p>
+              <div class="footer-address">
+                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                <p>+7 (812) 555-05-55</p>
+              </div>
           </div>
           <div class="footer-navigation">
             <ul class="footer-navigation-list">
