--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
         <div class="container">
           <div class="bottom-nav">
             <div class="header-info">
-              <p>Интернет-магазин<br>
-                строительных материалов<br>
-                и инструментов для ремонта
-              </p>
+              <div class="header-info-text">
+                <p>Интернет-магазин<br>
+                  строительных материалов <br>
+                  и инструментов для ремонта
+                </p>
+              </div>
               <div class="contacts">
                 <div class="phone">
                   <a class="phone-number" href="tel:+78125550555" aria-label="Номер телефона компании">+7 (812) 555-05-55</a>
                 </div>
-                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                <div class="address">
+                  <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                </div>
               </div>
               <div class="user-nav">
                 <ul class="button-user-nav">
@@ -154,7 +158,7 @@
               </div>
               <h4 class="perf">Перфоратор BOSCH BFG 9000 </h4>
               <div class="old-price">32500 Р.</div>
-              <div class="new-price">12500 Р.</div>
+              <div class="new-price-area"><div class="new-price">12500 Р.</div></div>
             </article>
             <article class="good bfg3000" >
               <img src="img/goods/perf2-3000.jpg" width="127" height="112" alt="BOSCH BFG 3000">
@@ -169,7 +173,7 @@
               <h4 class="perf">Перфоратор BOSCH BFG 3000 </h4>
               <div class="corner-label new-good">New</div>
               <div class="old-price">22500 Р.</div>
-              <div class="new-price">12500 Р.</div>
+              <div class="new-price-area"><div class="new-price">15500 Р.</div></div>
             </article>
             <article class="good bfg6000">
               <img src="img/goods/perf6000.jpg" width="144" height="128" alt="BOSCH BFG 6000">
@@ -185,7 +189,7 @@
               <span class="old-price">
                 30500 Р.
               </span>
-              <div class="new-price">12500 Р.</div>
+              <div class="new-price-area"><div class="new-price">25500 Р.</div></div>
             </article>
             <article class="good bfg2000">
               <img src="img/goods/perf2-3000.jpg" width="127" height="112" alt="BOSCH BFG 2000">
@@ -200,7 +204,7 @@
               <div class="corner-label new-good">New</div>
               <h4 class="perf">Перфоратор BOSCH BFG 2000</h4>
               <div class="old-price invisible">123</div>
-              <div class="new-price">12500 Р.</div>
+              <div class="new-price-area"><div class="new-price">12500 Р.</div></div>
             </article>
           </div>
         </section>
@@ -290,24 +294,30 @@
                 <div class="descr-service ">
                   <div class="descr-delivery description-part">
                     <h2 class="h2">Доставка</h2>
-                    <p>Мы с удовольствием доставим ваш товар прямо<br>
-                      к вашему подъезду совершенно бесплатно!<br>
-                      Ведь мы неплохо заработаем,<br>
-                      поднимая его на ваш этаж!</p>
+                    <div class="text-border">
+                      <p>Мы с удовольствием доставим ваш товар прямо<br>
+                        к вашему подъезду совершенно бесплатно!<br>
+                        Ведь мы неплохо заработаем,<br>
+                        поднимая его на ваш этаж!</p>
+                    </div>
                   </div>
                   <div class="descr-guarantee description-part">
                     <h2 class="h2">Гарантия</h2>
-                    <p>Если купленный у нас товар поломается или заискрит, <br>
-                      а также в случае пожара, спровоцированного его<br>
-                        возгоранием,  вы всегда можете быть уверены в нашей<br>
-                        гарантии. Мы обменяем сгоревший товар на новый.<br>
-                        Дом уж восстановите как-нибудь сами.</p>
+                    <div class="text-border">
+                      <p>Если купленный у нас товар поломается или заискрит, <br>
+                        а также в случае пожара, спровоцированного его<br>
+                          возгоранием,  вы всегда можете быть уверены в нашей<br>
+                          гарантии. Мы обменяем сгоревший товар на новый.<br>
+                          Дом уж восстановите как-нибудь сами.</p>
+                    </div>
                   </div>
                   <div class="descr-credit description-part">
                     <h2 class="h2">Кредит</h2>
-                    <p>Залезть в долговую яму стало проще!<br>
+                    <div class="text-border">
+                      <p>Залезть в долговую яму стало проще!<br>
                       Кредитные консультанты придут вам на помощь.</p>
                       <a href="#">Отправить заявку</a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -351,8 +361,10 @@
         <div class="top-footer-block container">
           <div class="left-side">
               <a class="footer-logo" href="#" aria-label="Логотип компании Техномарт"><img src="img/svg/logo-technomart-footer.svg" width="220" height="68" alt="Логотип Техномарт"></a>
-              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-              <p>+7 (812) 555-05-55</p>
+              <div class="footer-address">
+                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 </p>
+                <p>+7 (812) 555-05-55</p>
+              </div>
           </div>
           <div class="footer-navigation">
             <ul class="footer-navigation-list">
